--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "next-aelf-upgrade",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "automatically upgrade next-aelf",
+  "main": "src/index.ts",
   "bin": {
     "next-aelf-upgrade": "./bin/index.js"
   },
@@ -20,15 +20,16 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/temp": "^0.9.1",
     "@types/valid-url": "^1.0.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "4.7.4"
   },
   "dependencies": {
     "ora": "5.1.0",
     "temp": "^0.9.4",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "ansi-escapes": "^3.3.0",
+    "chalk": "~2.3.1",
+    "commander": "2.15.1"
   }
 }
