--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/clear": "^0.1.2",
+    "@types/prompts": "^2.4.1",
     "@types/temp": "^0.9.1",
     "@types/valid-url": "^1.0.3",
     "nodemon": "^2.0.20",
+    "prompts": "^2.4.2",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "chalk": "~2.3.1",
+    "clear": "^0.1.0",
+    "commander": "2.15.1",
     "ora": "5.1.0",
     "temp": "^0.9.4",
-    "valid-url": "^1.0.9",
-    "ansi-escapes": "^3.3.0",
-    "chalk": "~2.3.1",
-    "commander": "2.15.1"
+    "valid-url": "^1.0.9"
   }
 }
