--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-aelf-upgrade",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "automatically upgrade next-aelf",
   "main": "src/index.ts",
   "bin": {
@@ -23,7 +23,6 @@
     "@types/temp": "^0.9.1",
     "@types/valid-url": "^1.0.3",
     "nodemon": "^2.0.20",
-    "prompts": "^2.4.2",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
@@ -33,6 +32,7 @@
     "commander": "2.15.1",
     "ora": "5.1.0",
     "temp": "^0.9.4",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "prompts": "^2.4.2"
   }
 }
